# flask-docs-translations

./: .gitmodules  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
locales/es/LC_MESSAGES/: api.po  async-await.po  changes.po  config.po  errorhandling.po  extensiondev.po  index.po  installation.po  quickstart.po  server.po  testing.po  web-security.po
locales/fa/LC_MESSAGES/: api.po  async-await.po  changes.po  config.po  extensiondev.po  index.po  installation.po  license.po  quickstart.po  web-security.po
locales/fr/LC_MESSAGES/: api.po  appcontext.po  async-await.po  blueprints.po  changes.po  cli.po  config.po  contributing.po  debugging.po  design.po  errorhandling.po  extensiondev.po  extensions.po  index.po  installation.po  license.po  lifecycle.po  quickstart.po  reqcontext.po  server.po  shell.po  signals.po  templating.po  testing.po  views.po  web-security.po
locales/ko/LC_MESSAGES/: api.po  async-await.po  changes.po  config.po  extensiondev.po  index.po  installation.po  quickstart.po  web-security.po
locales/pot/: api.pot  appcontext.pot  async-await.pot  blueprints.pot  changes.pot  cli.pot  config.pot  contributing.pot  debugging.pot  design.pot  errorhandling.pot  extensiondev.pot  extensions.pot  index.pot  installation.pot  license.pot  lifecycle.pot  logging.pot  quickstart.pot  reqcontext.pot  server.pot  shell.pot  signals.pot  templating.pot  testing.pot  views.pot  web-security.pot
locales/pot/deploying/: apache-httpd.pot  asgi.pot  eventlet.pot  gevent.pot  gunicorn.pot  index.pot  mod_wsgi.pot  nginx.pot  (+3 more)
(+126 files in other folders)
